--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
               newsletter
             </h1>
             <p class="text-base text-[#777] font-medium">Email address</p>
-            <hr class="w-[273px]" />
+            <hr class="bg-blue-500 text-white border-gray-900 w-[273px]" />
+
             <!-- Icons -->
             <div class="space-x-5">
               <i class="fa-brands fa-facebook text-gray-700"></i>
